--- a/sphinx/Makefile
+++ b/sphinx/Makefile
@@ -17,6 +17,7 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	touch ../docs/.nojekyll
 	cp ../README.md ./INTRO.md
 	rm ./LICENSE.md
 	echo # License> ./LICENSE.md
